Kristall Changelog
==================

== 0.2
- Implement Ctrl+D/*Add to favourites* menu item
- Implement Ctrl+S/*Save as...* menu item
- Add display for "non-recognized files"
- Added support for gopher:// and gophermaps
- Added "go to home" menu 
- Added support for video/* and audio/* via QMediaPlayer
- Added support for file:// scheme
- Added status bar with loading time, file size and mime type
- Added support for command line arguments
- Added option to render all text/* documents as plain text.
- Added option to render gopher maps with icons *OR* text only
- Fixed bug: Correct URL escaping for gemini requests.
- Added progress display in status bar with loading time and already transferred bytes
- Added support for finger:// protocol
- Added experimental *highlighting* and _underlining_ for text/gemini
- Desktop file is provided for integrating with XDG
- Fixed bug: Preformatted lines don't break anymore
- text/gemini parsing updated
- Added support for block quotes
- Added help file
- Added shortcut to focus URL bar
- Added possibility to save/load/share theme presets. Make everything colorful!

== 0.1
- Initial release