@@ -2,7 +2,9 @@
 #define KRISTALL_HPP
 
 #include <QSettings>
+#include <QClipboard>
 
 extern QSettings global_settings;
+extern QClipboard * global_clipboard;
 
 #endif // KRISTALL_HPP
